--- a/public/index.html
+++ b/public/index.html
@@ -515,5 +515,5 @@
     });
 </script>
 <script>
-   const BACKEND_URL = "https://fb07-170-83-72-252.ngrok-free.app";
+   const BACKEND_URL = "https://55fb-170-83-72-252.ngrok-free.app";
 </script>
