Atualizacao da URL de backend

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
    <script>
-      const BACKEND_URL = "https://69da-2804-868-d046-c5c3-994-5d2c-c799-74bb.ngrok-free.app";
+      const BACKEND_URL = "https://c4b8-170-83-72-252.ngrok-free.app";
    </script>
    <html lang="en">
    <head>
