chamada de asset para corrigir imagem de contato

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
    <script>
-      const BACKEND_URL = "https://55fb-170-83-72-252.ngrok-free.app";
+      const BACKEND_URL = "https://c4b8-170-83-72-252.ngrok-free.app";
    </script>
    <html lang="en">
    <head>
@@ -374,7 +374,7 @@
         <h2 class="section__title">Escreva Para Nós e Construa</h2>
 
         <div class="contact__container grid">
-            <img src="${BACKEND_URL}/assets/img/contact-img.png" alt="image" class="contact__img">
+            <img src="assets/img/contact-img.png" alt="image" class="contact__img">
 
             <div class="contact__data grid">
                 <!-- Formulário de Contato -->
