--- a/public/index.html
+++ b/public/index.html
@@ -324,7 +324,8 @@
                     chunk.forEach(project => {
                         const projectCard = document.createElement('article');
                         projectCard.classList.add('projects__card');
-
+                        console.log(alert)
+                        alert(project.image_path)
                         projectCard.innerHTML = `
                             <img src="${project.image_path ? `${BACKEND_URL}/storage/${project.image_path}` : 'default-image.jpg'}" alt="image" class="projects__img">
                             <div class="projects__data">
