--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
    <script>
-      const BACKEND_URL = "https://c4b8-170-83-72-252.ngrok-free.app";
+      const BACKEND_URL = "https://55fb-170-83-72-252.ngrok-free.app";
    </script>
    <html lang="en">
    <head>
@@ -324,9 +324,10 @@
                     chunk.forEach(project => {
                         const projectCard = document.createElement('article');
                         projectCard.classList.add('projects__card');
-                        console.log(alert)
-                        alert(project.image_path)
+                        console.log(`${BACKEND_URL}/storage/${project.image_path}`)
+                        console.log(`assets/img/${project.image_path}`)
                         projectCard.innerHTML = `
+                            <img src="assets/img/${project.image_path}" alt="image" class="projects__img">
                             <img src="${project.image_path ? `${BACKEND_URL}/storage/${project.image_path}` : 'default-image.jpg'}" alt="image" class="projects__img">
                             <div class="projects__data">
                                 <h2 class="projects__title">${project.name}</h2>
