--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
    <script>
-      const BACKEND_URL = "https://55fb-170-83-72-252.ngrok-free.app";
+      const BACKEND_URL = "https://c4b8-170-83-72-252.ngrok-free.app";
    </script>
    <html lang="en">
    <head>
