--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
    <html lang="en">
    <script>
-      const BACKEND_URL = "https://153a-170-83-72-252.ngrok-free.appp";
+      const BACKEND_URL = "https://de5b-170-83-72-252.ngrok-free.app";
    </script>
    <head>
       <meta charset="UTF-8">
